# ashlar

./: .gitignore  AGENTS.md  Cargo.toml  README.md
crates/ashlar/: Cargo.toml
crates/ashlar/src/: ast.rs  check.rs  compose.rs  diag.rs  eval.rs  fixup.rs  fmt.rs  http.rs  lexer.rs  lib.rs  main.rs  manifest.rs  parser.rs  refactor.rs  resolve.rs  resolved.rs  tokens.rs
crates/ashlar/tests/: t_a1.rs  t_a2.rs  t_a4.rs  t_a5.rs  t_b.rs  t_d.rs  t_d5.rs  t_e.rs  t_examples.rs  t_f.rs  t_f1.rs  t_g.rs  t_meta.rs  t_no_stubs.rs
crates/ashlar/tests/support/: mod.rs
docs/: README.md  diagnostics.md  ontology.md  philosophical_edges.md  requirements.md  roadmap.md  vision.md
docs/decisions/: 0001-name-ashlar.md  0002-unit-part.md  0003-ordering-use-graph.md  0004-typing-discipline.md  0005-anonymity-boundary.md  0006-diagnostics-wire-format.md  0007-target-and-runtime-plan.md  0008-gate-findings-f1-f4.md  0009-refactor-completeness.md  0010-semantic-freedom-and-derivability.md  0010-stylesheet-boundary.md  0011-view-reconciliation.md  0012-semantic-freedom-and-derivability.md  0013-origin-not-edge.md  0014-databases-and-the-blocking-boundary.md  0015-storage-scope-owned.md  0016-example-design-language-and-showcase.md
examples/: README.md
examples/chat/: .ashlar-state.json  api.ash  audit.ash  data.ash  ui.ash
examples/commons/: app.ash  data.ash  mentions.ash  moderation.ash  ui.ash
examples/counter/: counter.ash
examples/diary/: diary.ash
examples/hello/: hello.ash
reference/: ashlar.md
showcase/: README.md  index.html  serve.sh
suites/: coverage.md
(+127 files in other folders)
